<resources>
    <string name="app_name">LCARS Dialer</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonStar">*</string>
    <string name="buttonZero">0</string>
    <string name="buttonHash">#</string>
    <string name="buttonPlaceCall">Place Call</string>
    <string name="buttonDelete">Delete</string>
</resources>
